[package]
name = "rfitsio"
version = "0.3.1"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/devDucks/astrotools/"
readme = "README.md"
description = "Basic building block for the lightspeed protocol and lightspeed compliant drivers"

[lib]
name = "rfitsio"
path = "src/lib.rs"

